# hbs-composer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
data/: person.json
data/inner/: other.txt
src/: main copy.rs  main.rs
templates/pages/: home.hbs  index.hbs
