[package]
name = "hbs-composer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
env_logger = "0.11.8"
handlebars = { version = "6.3.2", features = ["dir_source"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
